maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:46: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if (isDirectionFree(d) && sommeAngle=0) {
                           ^